--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "figlet": "^1.2.4",
     "gluegun": "latest",
-    "shell": "^0.5.0"
+    "path": "^0.12.7",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "jest": "^24.1.0",
